# risk-atlas-nexus-extensions

ran-ares-integration/: MANIFEST.in  README.md  pyproject.toml
ran-ares-integration/src/ran_ares_integration/: prompt_templates.py
ran-ares-integration/src/ran_ares_integration/assets/: __init__.py  human_jailbreaks.json
ran-ares-integration/src/ran_ares_integration/assets/knowledge_graph/: risk_to_ares_mappings.yaml
ran-ares-integration/src/ran_ares_integration/data/: __init__.py
ran-ares-integration/src/ran_ares_integration/data/knowledge_graph/: risk_to_ares_mappings.yaml
ran-ares-integration/src/ran_ares_integration/datamodel/: risk_to_ares_ontology.py
ran-ares-integration/src/ran_ares_integration/schema/: ares_config.yaml  common.yaml  risk_to_ares.yaml
ran-ares-integration/src/ran_ares_integration/utils/: riskares2linkml.py
